--- a/public/index.html
+++ b/public/index.html
@@ -30,7 +30,7 @@
       rel="stylesheet"
       href="https://fonts.googleapis.com/css?family=Comforter"
     />
-    <title>Lets Bake</title>
+    <title>Wheaty Bakery</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
